# discord-inviter-rs

./: Cargo.toml  example.env
src/: main.rs
